Fix a bug where modals would stretch to the height of the window and not overflow; Add some specs for the styling of modals and drawers (fixes #370)

--- a/src/unpoly/layer.sass
+++ b/src/unpoly/layer.sass
@@ -82,6 +82,7 @@ up-focus-trap
   overscroll-behavior: contain
 
   display: flex
+  align-items: flex-start
 
   // Center %up-overlay-box within the viewport.
   // This also turns block children into flex children, so they can grow with content,
